Add the Hide White & Paint Black

--- a/control.html
+++ b/control.html
@@ -30,6 +30,28 @@
         </div>
 
         <div>
+            <label for="hidewhite">Hide White:</label>        
+            <label class="switch">
+                <input type="checkbox" name="hidewhite" id="hidewhite">
+                <span class="slider round"></span>
+            </label>
+        </div>
+
+        <div>
+            <label for="paintblack">Paint Black:</label>        
+            <label class="switch">
+                <input type="checkbox" name="paintblack" id="paintblack">
+                <span class="slider round"></span>
+            </label>
+        </div>
+
+        <div>
+            <label for="paintblackas">Paint Black As:</label>        
+            <input name="paintblackas" id="paintblackas" value="FFFFFF">    
+        </div>
+
+
+        <div>
             <label for="submit">Action:</label>
             <input type="submit" id="submit" name="submit" value="Load" />
         </div>
