speckles and lines

--- a/control.html
+++ b/control.html
@@ -50,6 +50,21 @@
             <input name="paintblackas" id="paintblackas" value="FFFFFF">    
         </div>
 
+        <div>
+            <label for="speckles">Speckles:</label>        
+            <label class="switch">
+                <input type="checkbox" name="speckles" id="speckles">
+                <span class="slider round"></span>
+            </label>
+        </div>
+
+        <div>
+            <label for="lines">Random Lines:</label>        
+            <label class="switch">
+                <input type="checkbox" name="lines" id="lines">
+                <span class="slider round"></span>
+            </label>
+        </div>
 
         <div>
             <label for="submit">Action:</label>
