--- a/control.html
+++ b/control.html
@@ -78,6 +78,9 @@
       <span class="slider round"></span>
     </label>
 
+    <div>
+        <img id="liveview">
+    </div>
     <pre id="feedback"></pre>
 
     {{"<div><img src=\""+src+"\"></div>" if src else ""}}
