UI improvements & color picker

--- a/control.html
+++ b/control.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="/css/styles.css" />
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css"/>
+    <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
 </head>
 <body>
     <div id="content">
@@ -46,8 +47,11 @@
         </div>
 
         <div>
-            <label for="paintblackas">Paint Black As:</label>        
+            <label for="paintblackas">Paint Black As:</label>      
+            <!--  
             <input name="paintblackas" id="paintblackas" value="FFFFFF">    
+            -->
+            <input name="paintblackas" id="paintblackas" value="#0000FF" type="text" data-coloris>
         </div>
 
         <div>
